--- a/css/credit-cards-compare.css
+++ b/css/credit-cards-compare.css
@@ -37,6 +37,7 @@
   background: #f8f8f8;
   width: 100px;
   box-shadow: 0px 1px 2px #ccc;
+  z-index: 5000;
 }
 
 .credit-score {
